--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styes/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -19,6 +20,16 @@
                 <li><Button class="button-primary">Hire me</Button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div>
+                <h3 class="banner-greeting">Hi, I  am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="button-primary">Download CV</button>
+                <button class="button-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="./images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
