--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./styes/portfolio.css">
 </head>
 <body>
+    <div class="banner">
+        <img class="dev-img" src="./images/developer.png" alt="">
     <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
@@ -20,19 +22,76 @@
                 <li><Button class="button-primary">Hire me</Button></li>
             </ul>
         </nav>
-        <div class="banner">
+        <div class="banner2">
             <div>
                 <h3 class="banner-greeting">Hi, I  am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="button-primary">Download CV</button>
                 <button class="button-primary">Contact</button>
             </div>
             <img class="profile-pic" src="./images/hardy.png" alt="">
         </div>
     </header>
+    </div>
     <main>
-
+        <article class="about-me">
+            <div class="about-container">
+            <h3 class="about-header">About Me</h3>
+            <p class="about-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="personal-info">
+                <figure class="info">
+                    <h6>Name</h6>
+                    <p>Mary Hardy</p>
+                </figure>
+                <figure class="info">
+                    <h6>Email</h6>
+                    <p>info@gmail.com</p>
+                </figure>  
+                <figure class="info">
+                    <h6>Date of Birth</h6>
+                    <p>11 November, 2000</p>
+                </figure>
+                <figure class="info">
+                    <h6>From</h6>
+                    <p>California, USA</p>
+                </figure>
+            </div>
+            </div>
+        </article>
+        <section class="What-I-Do">
+            <figure class="What-text">
+                <h2>What I Do</h2>
+                <p class="What-Desc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </figure>
+            <figure class="skills">
+                <section class="box">
+                    <img class="icon" src="./images/icons/js.png" alt="">
+                    <h3 class="box-head">Vanilla JavaScript</h3>
+                    <p class="box-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </section>
+                <section class="box">
+                    <img class="icon" src="./images/icons/react.png" alt="">
+                    <h3 class="box-head">React</h3>
+                    <p class="box-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </section>
+                <section class="box">
+                    <img class="icon" src="./images/icons/nodejs.png" alt="">
+                    <h3 class="box-head">Node.js</h3>
+                    <p class="box-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </section>
+                <section class="box">
+                    <img class="icon" src="./images/icons/mongo.png" alt="">
+                    <h3 class="box-head">MongoDB</h3>
+                    <p class="box-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </section>
+            </figure>
+        </section>
+        <summary>
+            <center>
+                <h1>A summary of My Resume</h1>
+            </center>
+        </summary>
     </main>
     <footer>
 
