--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <div class="banner2">
-            <div>
+            <div class="banner-text">
                 <h3 class="banner-greeting">Hi, I  am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
@@ -91,10 +91,75 @@
             <center>
                 <h1>A summary of My Resume</h1>
             </center>
+            <figure class="two-blocks">
+                <section class="block">
+                    <h2 class="block-head">My Education</h2>
+                    <div class="education">
+                        <h3 class="block-head">Masters in CSE</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><br>
+                        <hr>
+                    </div>
+                    <div class="education">
+                        <h3 class="block-head">Masters in CSE</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><br>
+                        <hr>
+                    </div>
+                    <div class="education">
+                        <h3 class="block-head">Masters in CSE</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><br>
+                        
+                    </div>
+                </section>
+                <section class="block">
+                    <h2 class="block-head">My Experience</h2>
+                    <div class="education">
+                        <h3 class="block-head">Sr. Font End Developer</h3>
+                        <h4>Apple Inc / 2020 - Current</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><br>
+                        <hr>
+                    </div>
+                    <div class="education">
+                        <h3 class="block-head">Jr. Font End Developer</h3>
+                        <h4>Dribbble Inc / 2018 - 2022</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><br>
+                        <hr>
+                    </div>
+                    <div class="education">
+                        <h3 class="block-head">HTML Developer</h3>
+                        <h4>Adobe Inc / 2017 - 2018</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><br>
+                    </div>
+                </section>
+            </figure>
+            <center>
+                <button class="button-primary">Download CV</button>
+            </center>
         </summary>
     </main>
-    <footer>
-
+    <footer class="form">
+        <div class="left">
+            <p class="footer-head">
+                Let's Connect
+            </p>
+            <p class="foot-text">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <img class="foot-icon" src="./images/icons/facebook.png" alt="">
+            <img class="foot-icon" src="./images/icons/twitter.png" alt="">
+            <img class="foot-icon" src="./images/icons/insta.png" alt="">
+        </div>
+        <div>
+            <p class="footer-head">
+                Let's message me
+            </p>
+            <form class="main-form" action="">
+                <input class="tab" type="text" placeholder="Your name"><br>
+                <input class="tab" type="email" placeholder="Your email"><br>
+                <textarea class="message" cols="56" rows="10" placeholder="Message"></textarea><br>
+                <Button class="button-primary">Submit</Button>
+            </form>
+        </div>
     </footer>
 </body>
 </html>
